--- a/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.html
+++ b/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.html
@@ -32,6 +32,7 @@
           <ion-col>
             <mat-form-field class="full-width">
               <input
+              matTooltip="If you copied from below there could be space character before your search"
                 matInput
                 placeholder="Parent Name"
                 [(ngModel)]="name"
@@ -58,7 +59,7 @@
         </ion-row>
       </ion-grid>
 
-      <table mat-table [dataSource]="dataSource">
+      <table mat-table [dataSource]="dataSource" >
         <!-- Position Column -->
         <ng-container matColumnDef="name">
           <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
@@ -91,7 +92,7 @@
           </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"  (click)="viewSingleJob(row)"></mat-row>
       </table>
 
       <mat-card-actions>
