feat(excel-rma): Add auto sync for serials that failed to sync
added retry to purchase receipt failed jobs, basic UI for the same

--- a/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
+++ b/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
@@ -7,6 +7,10 @@
     <ion-toolbar>
       <ion-title>Fail Count : {{ data.failCount}}</ion-title>
       <ion-title>Failed At : {{ getParsedDate(data.failedAt)}}</ion-title>
+      <ion-button *ngIf="retry" (click)="retryJob()">
+        <ion-icon slot="start" name="add"></ion-icon>
+        Requeue
+      </ion-button>
     </ion-toolbar>
   </ion-header>
   {{ data.failReason}}
