feat(rma-server): Add job button for purchase and sales invoice
improved vie job page

--- a/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.html
+++ b/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.html
@@ -35,7 +35,7 @@
               matTooltip="If you copied from below there could be space character before your search"
                 matInput
                 placeholder="Parent Name"
-                [(ngModel)]="name"
+                [(ngModel)]="parent"
                 (keyup.enter)="setFilter()"
               />
             </mat-form-field>
