feat(rma-server): Add reset to purchase receipt jobs
purchase receipt jobs can now be reseted which resets the count for purchase invoice.

--- a/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
+++ b/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
@@ -2,7 +2,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Failed At : {{ getParsedDate(data.failedAt)}}</ion-title>
-    <ion-buttons slot="end" *ngIf="retry">
+    <ion-buttons slot="end" *ngIf="state.reset">
+      <ion-button (click)="resetJob()" color="danger">
+        Reset
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end" *ngIf="state.retry">
       <ion-button (click)="retryJob()" color="primary">
         Requeue
       </ion-button>
