feat(excel-rma): Added delivery note auto sync for serials
updated sync for delivery note being successfully created

--- a/packages/rma-frontend/src/app/credit-limit/update-credit-limit/update-credit-limit.component.html
+++ b/packages/rma-frontend/src/app/credit-limit/update-credit-limit/update-credit-limit.component.html
@@ -29,8 +29,7 @@
           matInput
           type="number"
           required
-          placeholder="ERPNext Credit Limit"
-          aria-label="ERPNext Credit Limit"
+          placeholder="Extended ERPNext Credit Limit"
           formControlName="erpnextLimit"
         />
       </mat-form-field>
