feat: Added Sales Team to Sales Invoice

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -62,7 +62,7 @@
             (click)="isSalesMenuVisible = !isSalesMenuVisible"
             lines="none"
           >
-            <ion-icon slot="start" name="settings"></ion-icon>
+            <ion-icon slot="start" name="receipt-outline"></ion-icon>
             <ion-icon
               name="chevron-down-outline"
               *ngIf="!isSalesMenuVisible"
